plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.5'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'org.nexus'
version = '1.0.0'

java {
    sourceCompatibility = 17
    targetCompatibility = 17
}

repositories {
    maven { url 'https://maven.aliyun.com/nexus/content/groups/public/' }
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.4'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.4'
    compileOnly 'org.projectlombok:lombok:1.18.32'
    annotationProcessor 'org.projectlombok:lombok:1.18.32'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'com.h2database:h2:2.2.224'
}

test {
    useJUnitPlatform()
}

// 本模块是供其他应用消费的库（无 main class），不产出 Spring Boot fat jar：
// 关闭 bootJar、启用普通 jar，否则消费方无法解析编译类路径。
bootJar {
    enabled = false
}

jar {
    enabled = true
    archiveClassifier = ''
}
